# recipena

./: .gitignore  .recipena.sample.toml  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.test  README.md  chan.go  go.mod  go.sum  makefile  renovate.json
.github/workflows/: claude.yaml  lint.yml  tabula-integration-test.yml
line-api/webhook/: Cargo.toml  README.md
line-api/webhook/.openapi-generator/: FILES
line-api/webhook/docs/: AccountLinkEvent.md  ActivatedEvent.md  AudioMessageContent.md  BeaconEvent.md  BotResumedEvent.md  BotSuspendedEvent.md  CallbackRequest.md  DeactivatedEvent.md  Event.md  EventMode.md  FollowEvent.md  ImageMessageContent.md  JoinEvent.md  JoinedMembers.md  JoinedMembershipContent.md  LeaveEvent.md  LeftMembers.md  LeftMembershipContent.md  MemberJoinedEvent.md  MemberLeftEvent.md  MembershipContent.md  MembershipEvent.md  Mention.md  Mentionee.md  MessageContent.md  MessageEvent.md  ModuleContent.md  ModuleEvent.md  PnpDeliveryCompletionEvent.md  PostbackContent.md  PostbackEvent.md  RenewedMembershipContent.md  ScenarioResult.md  ScenarioResultThingsContent.md  Source.md  TextMessageContent.md  ThingsContent.md  ThingsEvent.md  UnfollowEvent.md  UnsendEvent.md  (+3 more)
line-api/webhook/src/apis/: configuration.rs  dummy_api.rs  mod.rs
line-api/webhook/src/models/: account_link_event.rs  action_result.rs  activated_event.rs  all_mentionee.rs  attached_module_content.rs  audio_message_content.rs  beacon_content.rs  beacon_event.rs  bot_resumed_event.rs  bot_suspended_event.rs  callback_request.rs  chat_control.rs  content_provider.rs  (+54 more)
recipena-server/: Cargo.toml
recipena-server/src/: config.rs  error.rs  server.rs
recipena-server/src/port/: mod.rs
scripts/: copy-ssl-libs.sh  create_test_pdf.py  test_tabula_integration.sh
src/: config.rs  error.rs  lib.rs  logger.rs  main.rs  prelude.rs  server.rs
src/app/: echo.rs  mod.rs  random_recipe.rs  recipe.rs
src/domain/: recipe.rs
src/infra/: handler.rs  html.rs  line.rs  mod.rs  server.rs
src/infra/repository/: recipe.rs
src/libs/: mod.rs  reqwest.rs  tabula.rs
src/libs/axum/: mod.rs  server.rs  util.rs
src/libs/line/: client.rs  error.rs  message.rs
src/libs/notion/: client.rs  mod.rs  recipe.rs
src/line/: middleware.rs
tests/: integration_tabula.rs  sample-req.json
(+1 files in other folders)
