[package]
name = "recipena"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
axum = "0.8.4"
base64 = "0.22.1"
config = "0.15.11"
hmac = "0.12.1"
http = "1.3.1"
http-body-util = "0.1.3"
line-bot-sdk-rust = "1.0.2"
reqwest = "0.12.15"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10.9"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-stackdriver = "0.10.0"
tracing-subscriber = "0.3.19"

[dev-dependencies]
test-case = "3.3.1"
